--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,11 @@
   }
 
   #contact {  
-    font-family: 'Tahoma', sans-serif;
+    font-family: 'Calibri', sans-serif;
     padding-top: 60px;
-    padding-bottom: 90px;
+    padding-bottom: 100%;
     width: 100%;
-    height: 100%; /* change it to your value depending on context*/
+    /* height: 100%; */
     background: #3a6186; /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #3a6186 , #89253e); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #3a6186 , #89253e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
